# agent-access

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.example.yml  pyproject.toml  requirements.txt
.github/scripts/: release_bump_from_merged_pr.py  tag_if_version_bumped.py
.github/workflows/: publish-pypi.yml  release-bump-from-pr.yml  tag-on-version-bump.yml
agent_access/: __init__.py  __main__.py  config.py  github_collab.py  ssh_keys.py  verify.py
tests/: conftest.py  test_config.py  test_github_collab.py  test_main.py  test_release_bump_from_pr.py  test_verify.py
